--- a/Lab-1/area/area-css.html
+++ b/Lab-1/area/area-css.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>first-frame</title>
+  <title>area-css</title>
   <link rel="stylesheet" href="../css/area-style.css">
 </head>
 <body>
