--- a/Lab-1/main-file.html
+++ b/Lab-1/main-file.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Main-file</title>
+  <title>main-file</title>
   <link rel="stylesheet" href="css/main-style.css">
 </head>
   <frameset cols="30%, *" border="10" bordercolor="red">
