refactor: change structure code-style css

--- a/Lab-1/area/area-c.html
+++ b/Lab-1/area/area-c.html
@@ -1,6 +1,6 @@
-<!-- Указываем версию html 4.01 для работоспособности фреймов -->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN" "http://www.w3.org/TR/html4/frameset.dtd">
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,11 @@
   <title>area-c</title>
   <link rel="stylesheet" href="../css/area-style.css">
 </head>
+
 <body>
-  <p id="id-C++">С++ - язык программирования, который представляет из себя высокоуровневый компилируемый язык программирования общего назначения со статической типизацией, который подходит для создания самых различных приложений. На сегодняшний день С++ является одним из самых популярных и распространенных языков.</p>
+  <p id="id-C++">С++ - язык программирования, который представляет из себя высокоуровневый компилируемый язык
+    программирования общего назначения со статической типизацией, который подходит для создания самых различных
+    приложений. На сегодняшний день С++ является одним из самых популярных и распространенных языков.</p>
 </body>
+
 </html>
