--- a/Lab-1/area/area-cms.html
+++ b/Lab-1/area/area-cms.html
@@ -1,6 +1,6 @@
-<!-- Указываем версию html 4.01 для работоспособности фреймов -->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN" "http://www.w3.org/TR/html4/frameset.dtd">
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,11 @@
   <title>area-cms</title>
   <link rel="stylesheet" href="../css/area-style.css">
 </head>
+
 <body>
-  <p id="id-Cms">CMS или «Система управления контентом» (еще ее иногда называют движком сайта) — это массивный кусок софта, который представляет собой полный набор инструментов для создания сайта и управления им же. То есть то, что обычно делается с помощью HTML, CSS и JavaScript-файлов, тут делается нажатием кнопок в графическом интерфейсе.</p>
+  <p id="id-Cms">CMS или «Система управления контентом» (еще ее иногда называют движком сайта) — это массивный кусок
+    софта, который представляет собой полный набор инструментов для создания сайта и управления им же. То есть то, что
+    обычно делается с помощью HTML, CSS и JavaScript-файлов, тут делается нажатием кнопок в графическом интерфейсе.</p>
 </body>
+
 </html>
