--- a/Lab-1/area/area-php.html
+++ b/Lab-1/area/area-php.html
@@ -1,6 +1,6 @@
-<!-- Указываем версию html 4.01 для работоспособности фреймов -->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN" "http://www.w3.org/TR/html4/frameset.dtd">
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,11 @@
   <title>area-php</title>
   <link rel="stylesheet" href="../css/area-style.css">
 </head>
+
 <body>
-  <p id="id-Php">PHP — это скриптовый, интерпретируемый язык программирования. Зачем нужен PHP. Поясним каждое из определений и узнаем, в каких задачах будет полезен PHP. Основная задача PHP — это «оживление» HTML страниц. Обычные HTML-страницы статичны.</p>
+  <p id="id-Php">PHP — это скриптовый, интерпретируемый язык программирования. Зачем нужен PHP. Поясним каждое из
+    определений и узнаем, в каких задачах будет полезен PHP. Основная задача PHP — это «оживление» HTML страниц. Обычные
+    HTML-страницы статичны.</p>
 </body>
+
 </html>
